# Mogcord

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
.github/: CODEOWNERS
.github/workflows/: build.yml  clippy-check.yml  fmt.yml  linter_clippy.yml
db/: MongolDB_ERD.vpp
db/mongo/: ERD.vpp  ERD.vpp.vbak
docker/api/: Dockerfile
docker/backend/: Dockerfile
docker/mongol/: Dockerfile
public/static/styling/: main.css
src/: db.rs  dto.rs  file_writer.rs  handler.rs  handlers.rs  io.rs  lib.rs  macros.rs  main.rs  middleware.rs  model.rs
src/api/: auth_handler.rs  chat.rs  chat_handler.rs  hello.rs  message_handler.rs  mod.rs  relation_handler.rs  user.rs  user_handler.rs
src/api/user/: user.rs
src/db/: mod.rs  mongol.rs  mongoldb.rs
src/db/mongol/: bucket.rs  channel.rs  channel_parent.rs  chat.rs  helper.rs  log.rs  macros.rs  message.rs  model.rs  refresh_token.rs  relation.rs  repositories.rs  server.rs  user.rs
src/db/mongoldb/: mod.rs  mongol_helper.rs  mongol_user.rs  mongoldb.rs  repositories.rs
src/dto/: channel.rs  channel_parent.rs  chat.rs  chat_dto.rs  chat_info.rs  chat_type_dto.rs  message.rs  message_dto.rs  mod.rs  server.rs  user.rs  user_dto.rs
src/file_writer/: log.rs
src/handler/: auth.rs  auth_handler.rs  chat.rs  chat_handler.rs  message.rs  relation.rs  server.rs  user.rs  user_handler.rs
src/handler/auth/: login.rs  refresh.rs
src/handler/chat/: authenticated.rs
src/handler/relation/: authenticated.rs
src/handler/server/: authenticated.rs
src/handler/user/: authenticated.rs  create_user.rs
src/handlers/: api.rs  logic.rs  web.rs
src/handlers/api/: auth.rs  user.rs
src/handlers/logic/: auth.rs  user.rs
src/handlers/web/: auth.rs  middleware.rs  misc.rs  model.rs
src/io/: log.rs
src/middleware/: auth.rs  console_logging.rs  cookie.rs  cookies.rs  logging.rs  mod.rs  mw_auth.rs
src/middleware/auth/: cookie_names.rs  ctx.rs  jwt.rs  mod.rs  mw_auth.rs  refresh_token_creator.rs
src/middleware/cookies/: auth_cookie_names.rs  cookies.rs  mod.rs
src/middleware/logging/: mod.rs  mw_reponse.rs
src/model/: appstate.rs  bucket.rs  channel.rs  channel_parent.rs  chat.rs  error.rs  hashing.rs  log.rs  message.rs  mod.rs  pagination.rs  refresh_token.rs  relation.rs  server.rs  user.rs
src/model/appstate/: appstate.rs  mod.rs
src/model/channel/: parent.rs  repository.rs  (+2 more)
static/js/: htmx.js
static/styles/: main.css
static/styling/: main.css
templates/: base.html  index.html  input.css  layout.html  layout_app.html  layout_web.html  login.html  main.css  register.html  template.html
templates/app/: chat.html  index.html
templates/components/: button.html  chat.html  error-form.html  error.html  footer.html  head.html  header.html  nav.html  navbar.html  sidebar-chat.html  sidebar.html
templates/macros/: header.html  nav.html
templates/pages/: login.html  register.html
templates/styles/: main.css
templates/web/: index.html  login.html  register.html
(+183 files in other folders)
