[package]
name = "mogcord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_matches = "1.5"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs"]}
serde = {version = "^1", features = ["derive"]}
serde_json = "1.0"
derive_more = "^0.99"
uuid = { version = "^0.8", features = ["v4"]}
mongodb = { version = "2.8.2", features = ["zlib-compression", "zstd-compression", "snappy-compression"] }
chrono = { version = "0.4", features = ["serde"] }