[package]
name = "mogcord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_matches = "1.5"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
bson = { version = "2.11.0", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "^0.99"
dotenv = "0.15.0"
futures-util = "0.3"
mongodb = { version = "3.0.0", features = ["zlib-compression", "zstd-compression", "snappy-compression"] }
serde = {version = "^1", features = ["derive"]}
serde_json = "1.0"
serde_with = "3"
strum_macros = "0.25"
tokio = { version = "1.0", features = ["full"] }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["fs"]}
uuid = { version = "1.9.1", features = ["v7"]}