[package]
name = "mogcord"
version = "0.1.0"
edition = "2021"

[lints.clippy]
# Priority is needed so our config below is respected over the pedantic group
pedantic = { level = "warn", priority = -1 }
redundant_clone = "warn"
unnecessary_self_imports = "warn"
single_match_else = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow" 
too_many_lines = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_matches = "1.5"

[dependencies]
argon2 = "0.5.3"
askama = "0.12.1"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22.1"
bson = { version = "2.11.0", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "^0.99"
dotenv = "0.15.0"
futures-util = "0.3"
jsonwebtoken = "9.2.0"
mongodb = { version = "3.0.0", features = ["zlib-compression", "zstd-compression", "snappy-compression"] }
serde = {version = "^1", features = ["derive"]}
serde_json = "1.0"
serde_with = "3"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.25"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "buffer"] }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["fs"]}
uuid = { version = "1.9.1", features = ["v7"]}


# Vulnerability prevention
zerovec = "0.10.4"
zerovec-derive = "0.10.3"
